# compton-conf

./: .editorconfig  .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  Config.cmake  README.md  collapsiblepane.cpp  collapsiblepane.hpp  maindialog.cpp  maindialog.h  maindialog.ui  picom-conf.cpp  picom-conf.desktop.in
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml
autostart/: CMakeLists.txt  picom.desktop.in
autostart/translations/: picom.desktop.yaml  picom_ca.desktop.yaml  picom_cs.desktop  picom_cs.desktop.yaml  picom_da.desktop  picom_da.desktop.yaml  picom_de.desktop  picom_el.desktop  picom_el.desktop.yaml  picom_es.desktop  picom_es.desktop.yaml  picom_et.desktop.yaml  picom_fi.desktop.yaml  picom_gl.desktop  picom_it.desktop.yaml  picom_ja.desktop  picom_ko.desktop.yaml  picom_lt.desktop  picom_nb_NO.desktop.yaml  picom_pl.desktop  picom_pt.desktop  picom_pt.desktop.yaml  picom_tr.desktop
cmake/: QtAppResources.cmake
resources/: picom.conf.example
resources/autostart/: README.md  picom.desktop.in
resources/autostart/translations/: picom_da.desktop.yaml  picom_de.desktop.yaml  picom_fr.desktop.yaml  picom_gl.desktop.yaml  picom_he.desktop.yaml  picom_hi.desktop.yaml  picom_hu.desktop.yaml  picom_ja.desktop.yaml  picom_ka.desktop.yaml  picom_lt.desktop.yaml  picom_nl.desktop.yaml  picom_pa.desktop.yaml  picom_pl.desktop.yaml  picom_pt.desktop.yaml  picom_tr.desktop.yaml  picom_uk.desktop.yaml
resources/freedesktop/: application.desktop.in
resources/translations/: picom-conf.desktop.yaml  picom-conf.ts  picom-conf_arn.ts  picom-conf_ast.ts  picom-conf_be.ts  picom-conf_ca.desktop.yaml  picom-conf_ca.ts  picom-conf_cs.ts  picom-conf_cy.ts  picom-conf_da.desktop.yaml  picom-conf_da.ts  picom-conf_de.ts  picom-conf_el.ts  picom-conf_en_GB.ts  picom-conf_es.desktop.yaml  picom-conf_es.ts  picom-conf_et.ts  picom-conf_eu.ts  picom-conf_fi.desktop.yaml  picom-conf_fi.ts  picom-conf_fil.ts  picom-conf_fr.desktop.yaml  picom-conf_fr.ts  picom-conf_gl.desktop.yaml  picom-conf_gl.ts  picom-conf_he.ts  picom-conf_hi.ts  picom-conf_hu.ts  picom-conf_id.ts  picom-conf_it.ts  picom-conf_ja.desktop.yaml  picom-conf_ja.ts  picom-conf_ka.ts  picom-conf_ko.ts  picom-conf_lt.ts  picom-conf_lv.ts  picom-conf_nb_NO.ts  picom-conf_nl.ts  picom-conf_pa.ts  picom-conf_pl.desktop.yaml  (+25 more)
src/: collapsiblepane.cpp  collapsiblepane.hpp  maindialog.cpp  maindialog.h  maindialog.ui  picom-conf.cpp
translations/: CMakeLists.txt  picom-conf.desktop.yaml  picom-conf.ts  picom-conf_arn.ts  picom-conf_ast.ts  picom-conf_be.ts  picom-conf_ca.desktop  picom-conf_ca.ts  picom-conf_cs.desktop  picom-conf_cs.desktop.yaml  picom-conf_cs.ts  picom-conf_cy.ts  picom-conf_da.desktop  picom-conf_da.ts  picom-conf_de.desktop  picom-conf_de.desktop.yaml  picom-conf_de.ts  picom-conf_el.ts  picom-conf_en_GB.ts  picom-conf_es.desktop  picom-conf_es.ts  picom-conf_et.desktop.yaml  picom-conf_et.ts  picom-conf_eu.ts  picom-conf_fi.ts  picom-conf_fil.ts  picom-conf_fr.desktop  picom-conf_fr.ts  picom-conf_gl.desktop  picom-conf_gl.ts  picom-conf_he.ts  picom-conf_hi.ts  picom-conf_hu.desktop  picom-conf_hu.desktop.yaml  picom-conf_hu.ts  picom-conf_id.ts  picom-conf_it.desktop  picom-conf_it.desktop.yaml  picom-conf_it.ts  picom-conf_ja.desktop  (+31 more)
